// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeView /> should render navbar 1`] = `
<div
  data-testid="navbar"
>
  <h1>
    Red Moon
  </h1>
</div>
`;

exports[`<HomeView /> should render view 1`] = `
<div
  data-testid="home-view"
>
  <div
    data-testid="navbar"
  >
    <h1>
      Red Moon
    </h1>
  </div>
</div>
`;
